# pyc2e

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yaml
pyc2e/: __init__.py  __main__.py  common.py  miniparser.py
pyc2e/interfaces/: __init__.py  interface.py  response.py
pyc2e/interfaces/unix/: __init__.py
pyc2e/interfaces/win32/: __init__.py
pyc2e/interfaces/win32/win32api/: common.py  events.py  mutex.py  process.py  wait.py
tests/common/: test_coerce_to_bytearray.py  test_response.py
tests/miniparser/: test_comment_stripping.py
