[project]
name = "pyc2e"
version = "0.0.5"
readme = "README.rst"
description = "Engine management & script injection for the Creatures Evolution Engine"
authors = [
    {name="pushfoo"}
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
keywords=[
    "modding",
    "tools",
    "creatures",
    "script injection",
    "caos"
]

dependencies = []


[project.urls]
Homepage = "https://github.com/pushfoo/pyc2e"
Issues = "https://github.com/pushfoo/pyc2e/issues"
Source = "https://github.com/pushfoo/pyc2e"


[project.optional-dependencies]
dev = [
    'pytest>=7.1,<8',
]

[project.scripts]
pyc2e = "pyc2e.__main__:main"

[tool.setuptools.packages.find]
include = ["pyc2e", "pyc2e.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ["doc", ".venv", "env", "dist"]
